# stm32_bluepill_in_rust__Template

./: Cargo.toml  README.md  openocd.gdb  stm32_bluepill_Rust_installation_configuration_V02.md
src/: main.rs
