[package]
name = "stm32_bluepill_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##### Most update versions.
##### I performed all the necessary changes to the code to make the example work again.
##### They were very simple changes.
stm32f1xx-hal = { version = "0.8.0", features = ["rt", "stm32f103" ] }
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-semihosting = "0.5.6"
cortex-m-semihosting = "0.3.7"
# nb = "1.0.0"
